--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -11,6 +11,9 @@
     .absolute-pos{
         padding-left: 50px;
     }
+    .padd-1 {
+        padding-left: 40px;
+    }
 }
 
 @media (max-width: 1399px){
@@ -252,6 +255,78 @@
         margin-bottom: 80px;
     }
     /* Partners */
+    /* Photo - Gallery */
+    .gallery{
+        padding-top: 70px;
+        padding-bottom: 100px;
+    }
+    .gallery-1 .position-img, .gallery-2 .position-img{
+        width: 300px;
+    } 
+    .gallery-text{
+        padding-right: 14%;
+    }
+    .gallery-row-reverse .gallery-text{
+        padding-left: 14%;
+    }
+    .gallery-img{
+        max-width: 391px;
+    }
+    /* Photo - Gallery */
+    /* Video - Gallery */
+    .video-item a{
+        height: 390px;
+    }
+    /* Video - Gallery */
+    /* Album */
+    .photo-box {
+        gap: 0 20px;
+    }
+    .photo-box a {
+        width: calc((100% - 100px) / 6);
+        position: relative;
+        height: 200px;
+        margin-bottom: 20px;
+    }
+    /* Album */
+    /* Contact */
+    .padd-1 {
+        padding-left: 30px;
+    }
+    .contact-right-side{
+        padding: 80px 0;
+    }
+    .phone-icon span svg {
+        width: 46px;
+        height: 46px;
+    }
+    /* Contact */
+    /* Products-det */
+      /* SLIDER margin */
+  .containers-slider .slick-slide {
+    margin-left:20px!important;
+  }
+  .containers-slider .slick-list {
+    margin-left:-20px!important;
+  }
+  /* SLIDER margin */
+  .c-slider-item{
+      height: 260px;
+  }
+  .tab-img-products{
+      width: 100%;
+      height: 387px;
+  }
+  .container-components{
+      gap: 50px;
+  }
+  .container-components-box{
+      padding-left: 20px;
+  }
+  .tab-img-item:nth-child(2) {
+    margin: 0 10px;
+}
+    /* Products-det */
 }
 
 @media (max-width: 1199px){
@@ -511,6 +586,69 @@
             max-width: 730px;
         }
         /* Search */
+        /* Photo - Gallery */
+        .gallery{
+            padding-top: 60px;
+            padding-bottom: 80px;
+        }
+        .gallery-1 .position-img, .gallery-2 .position-img{
+            width: 280px;
+        } 
+        .gallery-text{
+            padding-right: 5%;
+        }
+        .gallery-row-reverse .gallery-text{
+            padding-left: 5%;
+        }
+        .gallery-img{
+            max-width: 371px;
+        }
+        .gallery-1:before{
+            bottom: 45px;
+        }
+        /* Photo - Gallery */
+        /* Video - Gallery */
+        .video-item a{
+            height: 320px;
+        }
+        .video-item a .text-side{
+            line-height: 22px;
+        }
+        .video-item a .img-box svg{
+            width: 60px;
+        }
+        
+        /* Video - Gallery */
+        .photo-box a .photo-hover .text{
+            line-height: 18px;
+        }
+        .photo-box {
+            gap: 0 30px;
+        }
+        .photo-box a {
+            width: calc((100% - 90px) / 4);
+            position: relative;
+            height: 220px;
+            margin-bottom: 30px;
+        }
+        .album-slider-pos{
+            width: 320px;
+        }
+        /* Album */
+        /* Contact */
+        .contact-title{
+            margin-bottom: 30px;
+        }
+        .contact-right-side {
+            padding: 75px 0;
+        }
+        .padd-1 {
+            padding-left: 12px;
+        }
+        .phone-1{
+            margin-bottom: 40px;
+        }
+        /* Contact */
 }
 @media (max-width: 991px){
     :root{
@@ -529,6 +667,8 @@
         --person-name: 16px;
         --person-special: 14px;
         --person-contact-link: 14px;
+        --contact-font-number: 14px;
+        --contact-input-font: 12px;
     }
     .header-pos-container{
         box-shadow: 0 2px 5px -3px grey;
@@ -1243,6 +1383,198 @@
         margin-bottom: 57px;
     }
     /* Search */
+    /* Photo - Gallery */
+    .gallery {
+        padding-top: 53px;
+        padding-bottom: 53px;
+        margin-bottom: 50px;
+    }
+    .gallery-1 .position-img, .gallery-2 .position-img {
+        width: 196px;
+    }
+    .gallery-img {
+        max-width: 224px;
+        height: 140px;
+    }
+    .gallery-img img{
+        border-radius: 4px;
+    }
+    .gallery-text{
+        padding-right: calc(var(--bs-gutter-x) * 0.5);
+        padding-left: calc(var(--bs-gutter-x) * 0.5);
+        max-width: calc(100% - 224px);
+    }
+    .gallery-row-reverse .gallery-text{
+        padding-right: calc(var(--bs-gutter-x) * 0.5);
+        padding-left: calc(var(--bs-gutter-x) * 0.5);
+    }
+    .gallery-text h2{
+        line-height: 22px;
+        max-height: 43px;
+        margin-bottom: 10px;
+    }
+    .gallery-text .text{
+        line-height: 20px;
+        margin-bottom: 15px;
+    }
+    .gallery-1:after{
+        height: 27px;
+    }
+    .gallery-2:before{
+        height: 27px;
+        border-radius: 0 4px 0 0px;    
+    }
+    .gallery-2:after{
+        height: 58px;
+        top: 30px;
+        border-radius: 4px 0 0 4px;
+    }
+    .gallery-1:before{
+        bottom: 30px;
+        height: 58px;
+        border-radius: 0 4px 4px 0;
+    }
+    .gallery:last-child{
+        margin-bottom: 57px;
+    }
+    /* Photo - Gallery */
+    /* Video - Gallery */
+    .video-item a .img-box{
+        height: 190px;
+        border-radius: 4px;
+    }
+    .video-item a .text-side{
+        line-height: 20px;
+        font-size: 14px;
+        padding-right: 8%;
+        height: 38px;
+    }
+    .video-item a .img-box{
+        margin-bottom: 10px;
+    }
+    .video-item a .img-box svg {
+        width: 41px;
+    }
+    .video-item{
+        padding: 0 7px;
+    }
+    .video-item:nth-child(2n) {
+        margin-top: 15px;
+    }
+    .video-item a {
+        height: 236px;
+    }
+    .mg-b-21{
+        margin-bottom: 57px;
+    }
+    /* Video - Gallery */
+    /* Album */
+    .photo-box {
+        gap: 0 20px;
+    }
+    .photo-box a {
+        width: calc((100% - 60px) / 4);
+        height: 170px;
+        margin-bottom: 20px;
+    }
+    .m-b-22 {
+        padding-top: 53px;
+        padding-bottom: 53px;
+    }
+    .news-position {
+        padding-right: 28px;
+    }
+    .news-img-box{
+        height: 138px;
+    }
+    .news-text-box h2.m-b-1{
+        margin-bottom: 10px;
+    }
+    .news-text-box .text{
+        margin-bottom: 10px;
+        max-height: 38px;
+    }
+    .m-t-1 {
+        margin-top: 0px;
+    }
+    .news-text-box {
+        padding-left: 0;
+        padding-top: 8px;
+        margin-left: -14px;
+        position: relative;
+        z-index: 10;
+    }
+    .album-slider-pos {
+        width: 196px;
+    }
+    .news-section::after {
+        bottom: 30px;
+        width: 30.2%;
+        height: 58px;
+    }
+    /* Album */
+    /* Contact */
+    .phone-icon span svg {
+        width: 24px;
+        height: 24px;
+    }
+    .contact-right-side {
+        padding: 30px 0;
+    }
+    .contact-right-side:before,.contact-right-side:after{
+        width: 52px;
+        height: 52px;
+    }
+    .phone-icon h2{
+        line-height: 20px;
+        margin-top: 15px;
+        margin-bottom: 10px;
+    }
+    .phone-icon .numbers a{
+        margin-bottom: 10px;
+        line-height: 14px;
+    }
+    .phone-1 {
+        margin-bottom: 24px;
+    }
+    .contact-title{
+        margin-bottom: 22px;
+        font-size: 16px;
+        line-height: 20px;
+        font-weight: bold;
+    }
+    .full-name label, .email label, .text-area label{
+        margin-bottom: 12px;
+        line-height: 20px;
+    }
+    .full-name input, .email input{
+        padding: 10px;
+        height: 31px;
+    }
+    .contact-form-side form .full-name, .contact-form-side form .email{
+        margin-bottom: 15px;
+    }
+    .text-area textarea {
+        height: 100px;
+        padding: 10px;
+    }
+    .contact-form-side form .text-area{
+        margin-bottom: 20px;
+    }
+    .submit button{
+        border-radius: 3px;
+        padding: 5px 23px;
+        line-height: 20px;
+        font-size: 12px;
+    }
+    .phone-icon .address{
+        line-height: 20px;
+        padding: 0 9%;
+    }
+    .map{
+        height: 238px;
+    }
+    /* Contact */
 }
 @media (max-width:900px){
     .team-member-1:before,.team-member-2:after{
@@ -1253,6 +1585,7 @@
     :root{
         --adv-contact-font: 14px;
         --b-r-c-font: 12px;
+        --contact-font-number: 14px;
     }
     .team-member-1:before,.team-member-2:after{
         width: 22%;
@@ -1325,6 +1658,19 @@
         padding-top: 20px;
     }
      
+    /* Photo - Gallery */
+    .gallery-text .text{
+        line-height: 18px;
+        margin-bottom: 10px;
+        max-height: 36px;
+        overflow: hidden;
+    }
+    .gallery-text h2 {
+        line-height: 20px;
+        max-height: 39px;
+        margin-bottom: 7px;
+    }
+    /* Photo - Gallery */
     /* ABOUT PAGE */
     /* Partners */
     .pagination-2{
@@ -1352,6 +1698,93 @@
         justify-content: center;
     }
     /* Team */
+    .video-item a{
+        height: 221px;
+    }
+    .video-item a .img-box{
+        height: 173px;
+    }
+    .mg-b-21{
+        margin-bottom: 35px;
+    }
+    .video-item {
+        padding: 0px 9px;
+    }
+    .video-item:nth-child(2n) {
+        margin-top: 18px;
+    }
+    /* Video - Gallery */
+    /* Album */
+    .photo-box a:nth-child(2n){
+        margin-top: 20px;
+    }
+    .photo-box a {
+        width: calc((100% - 20px) / 2);
+        height: 172px;
+    }
+    .news-section::after{
+        width: 24%;
+    }
+    .news-text-box{
+        padding-top: 0;
+    }
+    .mg-b-21 {
+        margin-bottom: 57px;
+    }
+     .contact-end-row{
+         flex-direction: column-reverse;
+         position: relative;
+         padding-top: 50px;
+     }
+     .contact-right-side:before, .contact-right-side:after {
+        width: 42px;
+        height: 87px;
+    }
+    .padd-1{
+        padding: 0 30px;
+    }
+    .contact-right-side {
+        padding: 40px 0;
+    }
+    .phone-icon h2 {
+        line-height: 20px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    .contact-title{
+        position: absolute;
+        top: 0;
+    }
+    .contact-form-side{
+        margin-top: 30px;
+        padding-right: 12px;
+    }
+    .contact-form-side form .full-name, .contact-form-side form .email{
+        width: 100%;
+    }
+    .text-area textarea{
+        height: 200px;
+    }
+    .full-name input, .email input {
+        padding: 16px;
+        height: 50px;
+    }
+    .contact-form-side form .full-name, .contact-form-side form .email {
+        margin-bottom: 24px;
+    }
+    .contact-form-side form .text-area {
+        margin-bottom: 24px;
+    }
+    .submit{
+        justify-content: center;
+    }
+    .padding{
+        padding: 30px 0;
+    }
+    .map {
+        height: 161px;
+    }
+    /* Album */
 }
 @media (max-width:575px){
     :root{
@@ -1835,4 +2268,95 @@
         margin-bottom: 30px;
     }
     /* Search */
+    /* Photo - Gallery */
+    .gallery {
+        padding-top: 60px;
+        padding-bottom: 60px;
+        margin-bottom: 40px;
+    }
+    .gallery-row{
+        flex-wrap: wrap;
+    }
+    .gallery-row-reverse {
+        flex-direction: initial;
+    }   
+    .gallery-img{
+        max-width: 100%;
+        height: 236px;
+    } 
+    .gallery-text{
+        max-width: 100%;
+        margin-top: 20px;
+    }
+    .gallery-text h2{
+        margin-bottom: 10px;
+    }
+    .gallery-text .text{
+        max-height: 53px;
+        margin-bottom: 15px;
+    }
+    .gallery-1:before{
+        height: 30px;
+        bottom: 0;
+        width: 120px;
+    }
+    .gallery-1:after,.gallery-2:before{
+        width: 120px;
+    }
+    .gallery-2:after{
+        width: 120px;
+        height: 30px;
+        top: 0;
+    }
+    .gallery-1 .position-img, .gallery-2 .position-img{
+        width: 129px;
+    }
+    .gallery-2 .position-img{
+        left: initial;
+        right: 0;
+        top: initial;
+        bottom: 0;
+        transform: rotate(0);
+    }
+    .gallery:last-child{
+        margin-bottom: 40px;
+    }
+    /* Photo - Gallery */
+    /* Album */
+    .padding-2{
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    .padding-2::before{
+        height: 30px;
+        width: 120px;
+        border-bottom-left-radius:4px;
+    }
+    .padding-2::after{
+        top: initial;
+        bottom: 0;
+        width: 120px;
+        height: 30px;
+    }
+    .album-text-box{
+        margin-top: 20px;
+    }
+    .padding-2 h2.m-b-1{
+        max-height: 38px;
+    }
+    .padding-2 .news-img-box{
+        padding: 0;
+        padding-right: initial;
+        padding-left: initial;
+        height: 236px;
+    }
+    
+    .padding-2 .news-text-box .text{
+        max-height: 52px;
+        margin-bottom: 15px;
+    }
+    .album-slider-pos{
+        width: 129px;
+    }
+    /* Album */
 }
