--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -327,6 +327,32 @@
     margin: 0 10px;
 }
     /* Products-det */
+    /* Products */
+    .product-list-item h3{
+        text-align: center;
+    }
+    .select-categories-box{
+        padding-right: 70px;
+    }
+    .products-container {
+        width: 107%;
+       margin-left: -7%;
+    }
+    .list-img{
+        height: 250px;
+    }
+    .list-img .photo-hover .text{
+        max-height: 115px;
+        line-height: 20px;
+        padding: 0px 20px;
+    }
+    .product-list-item {
+        width: calc((100% / 4) - 15px);
+    }
+    .products-list{
+        gap: 30px 20px;
+    }
+    /* Products */
 }
 
 @media (max-width: 1199px){
@@ -649,6 +675,25 @@
             margin-bottom: 40px;
         }
         /* Contact */
+        /* Products */
+        .product-list-item h3{
+            font-size: 16px;
+            line-height: 20px;
+            margin-top: 10px;
+        }
+        .list-img {
+            height: 200px;
+        }
+        .list-img .photo-hover .text {
+            max-height: 98px;
+        }
+        .products-list {
+            gap: 20px 20px;
+        }
+        .select-categories-box {
+            padding-right: 40px;
+        }
+        /* Products */
 }
 @media (max-width: 991px){
     :root{
@@ -669,6 +714,7 @@
         --person-contact-link: 14px;
         --contact-font-number: 14px;
         --contact-input-font: 12px;
+        --c-components-text: 14px;
     }
     .header-pos-container{
         box-shadow: 0 2px 5px -3px grey;
@@ -1575,6 +1621,163 @@
         height: 238px;
     }
     /* Contact */
+    /* Products - Detail */
+    .tab-img-products{
+        height: 242px;
+    }
+    .tab-img-products a{
+        width: 103%;
+    }
+    .tab-img-item {
+        width: 47px;
+        height: 48px;
+        border: 2px solid #fff;
+    }
+    .tab-img-item:hover {
+        border: 2px solid #E3662A;
+    }
+    .tab-img-box-position{
+        bottom: 10px;
+    }
+    .tab-zoom{
+        width: 25px;
+        height: 25px;
+    }
+    .tab-zoom svg {
+        width: 12px;
+    }
+    .container-name{
+        font-size: 16px;
+        line-height: 24px;
+        margin-bottom: 10px;
+    }
+    .cont-snt{
+        font-size: 14px;
+        line-height: 21px;
+        padding: 8px 35px 8px 10px;
+        clip-path: polygon(0 0, 91% 0, 100% 100%, 0% 100%);
+        margin-bottom: 15px;
+    }
+    .container-description h3{
+        line-height: 18px;
+        margin-bottom: 5px;
+    }
+    .container-description .text{
+        font-size: 14px;
+        list-style: none;
+        max-height: 40px;
+        line-height: 20px;
+        margin-bottom: 20px;
+    }
+    .c-c-t h5{
+        line-height: 20px;
+        margin-bottom: 16px;
+    }
+    .container-components {
+        gap: 20px;
+    }
+    .weight{
+        padding-right: 10px;
+        max-height: 91px;
+    }
+    .c-c-t div span:nth-child(2) {
+        line-height: 18px;
+        margin-left: 5px;
+    }
+    .c-slider-item h2 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        line-height: 18px;
+        margin-top: 13px;
+        height: 43px;
+    }
+    .c-m-q h5 span {
+        margin-left: 8px;
+    }
+    .c-slider-item {
+        height: 211px;
+    }
+    .c-slider-item img{
+        border-radius: 4px;
+        height: 147px;
+    }
+    .containers-slider {
+        margin-bottom: 30px;
+    }
+    
+      /* SLIDER margin */
+  .containers-slider .slick-slide {
+    margin-left:17px!important;
+  }
+  .containers-slider .slick-list {
+    margin-left: -17px!important;
+  }
+  /* SLIDER margin */
+    /* Products - Detail */
+  /* Products */
+  .select-categories-box h2{
+      font-size: 16px;
+      line-height: 24px;
+  }
+  .select-categories-box{
+      padding-right: 0;
+  }
+  .list-ul .list-li{
+      max-height: 25px;
+      margin-bottom: 15px;
+  }
+  .list-ul li a{
+      font-size: 16px;
+      line-height: 24px;
+  }
+  .child-ul li {
+    max-height: 24px;
+    margin-bottom: 10px;
+  }
+  .child-ul li a {
+    padding-top: 0px;
+}
+.list-ul li span{
+    margin-right:20px;
+}
+.child-ul li span {
+    margin-top: 0px;
+    margin-right: 20px;
+}
+.products-container{
+    width: 100%;
+    margin-left: initial;
+}
+.product-search-result h2{
+    line-height: 24px;
+    margin-bottom: 8px;
+}
+.product-search-result h4{
+    font-size: 12px;
+    margin-bottom: 20px;
+}
+.form-box form{
+    width: 192px;
+}
+.form-box form input{
+    font-size: 12px;
+    padding-bottom: 8px;
+}
+.product-list-item {
+    width: calc((100% / 3) - 15px);
+}
+  .list-img {
+    height: 147px;
+  }
+  .product-list-item h3{
+      font-size: 14px;
+  }
+  .list-img img{
+      border-radius: 4px;
+  }
+  /* Products */
 }
 @media (max-width:900px){
     .team-member-1:before,.team-member-2:after{
@@ -1656,6 +1859,7 @@
     }
     .b-r-c{
         padding-top: 20px;
+        flex-wrap: wrap;
     }
      
     /* Photo - Gallery */
@@ -1785,6 +1989,116 @@
         height: 161px;
     }
     /* Album */
+    /* Products-details */
+    .tab-img-products {
+        height: 270px;
+        margin-bottom: 30px;
+    }
+    .tab-img-products a {
+        width: 100%;
+    }
+    .center-row{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .tab-img-item {
+        width: 60px;
+        height: 60px;
+    }
+    .container-components-box{
+        padding-left: initial;
+    }
+    /* Products-details */
+    /* Products */
+    .select-categories-box{
+        max-height: 0;
+        overflow: hidden;
+        transition: 0.3s;
+    }
+    .products-container .form-box{
+        flex-direction: column;
+    }
+    .product-search-result{
+        width: 100%;
+        position: relative;
+    }
+    .filter-title-close{
+        display: block;
+        width: 100%;
+        background: #F9F9F9;
+        margin-bottom: 26px;
+        max-height: 0;
+        overflow: hidden;
+        transition: 0.3s;
+    }
+    .filter-flex{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: nowrap;
+        height: 88px;
+        width: 100%;
+        align-items: center;
+    }
+    .filter-close{
+        cursor: pointer;
+        padding: 3px;
+    }
+    .filter-button{
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+        border-radius: 4px;
+        background-color: #F9F9F9;
+        height: 40px;
+        width: 90px;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        cursor: pointer;
+    }
+    .filter-button span:first-child{
+        font-size: 12px;
+        line-height: 18px;
+        color: #000000;
+        font-family: 'Heebo';
+        font-weight: 500;
+    }
+    .product-search-result h4{
+        margin-bottom: 10px;
+    }
+    .form-box form{
+        width: 100%;
+        margin-bottom: 20px;
+        margin-top: 1px;
+    }
+    .form-box form input{
+        border-bottom: none;
+        border-radius: 4px;
+        background-color: #F9F9F9;
+        height: 45px;
+        padding-left: 45px;
+        padding-bottom: 0;
+    }
+    .form-box form button{
+        right: initial;
+        top: 5px;
+        left: 11px;
+    }
+    .addHeight{
+        max-height: 1000px;
+        overflow-y: auto;
+        margin-bottom: 40px;
+    }
+    .hr2{
+        width: 100%;
+    }
+    .list-ul li span {
+        margin-right: 10px;
+    }
+    /* Products */
 }
 @media (max-width:575px){
     :root{
@@ -2359,4 +2673,87 @@
         width: 129px;
     }
     /* Album */
+    /* Products-details */
+    .products-det-cont{
+        overflow-x: hidden;
+    }
+    .tab-img-products {
+        height: 410px;
+        width: 148%;
+        margin-left: -24%;
+    }
+    .tab-img-item{
+        height: 74px;
+        width: 74px;
+    }
+    .tab-img-item:nth-child(2) {
+        margin: 0 20px;
+    }
+    .tab-zoom {
+        width: 39px;
+        height: 39px;
+    }
+    .tab-zoom svg {
+        width: 22px;
+    }
+    .container-description h3{
+        font-size: 14px;
+    }
+    .cont-snt {
+        font-size: 13px;
+        line-height: 21px;
+        height: 34px;
+        padding: 8px 24px 6px 10px;
+        clip-path: polygon(0 0, 88% 0, 100% 100%, 0% 100%);
+        margin-bottom: 15px;
+        overflow: hidden;
+    }
+    .container-description .text {
+        font-size: 12px;
+        max-height: 52px;
+        line-height: 18px;  
+    }
+    .container-components {
+        flex-wrap: wrap;
+        gap: 40px;
+    }
+    .c-weight{
+        width: 30%;
+    }
+    .c-size{
+        width: calc(69% - 40px);
+    }
+    .c-m-q{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+    .c-m-q h5{
+        margin-bottom: 0;
+    }
+    .c-slider-item {
+        height: 240px;
+    }
+    .c-slider-item img {
+        height: 175px;
+    }
+    /* Products-details */
+    /* Products */
+    .list-img {
+        height: 176px;
+    }
+    .product-list-item {
+        width: calc((100% / 2) - 10px);
+    }
+    .padding-b {
+        padding-bottom: 30px;
+    }
+    /* Products */
+}
+@media (max-width: 420px){
+    .tab-img-products {
+        width: 114%;
+        height: 374px;
+        margin-left: -7%;
+    }
 }
