--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -2040,6 +2040,14 @@
         width: 100%;
         align-items: center;
     }
+    .filter-flex h2{
+        font-size: 16px;
+        font-weight: bold;
+        line-height: 24px;
+        color: #1B1B1B;
+        font-family: 'Heebo';
+        margin-bottom: 0;
+    }
     .filter-close{
         cursor: pointer;
         padding: 3px;
