--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -2280,6 +2280,8 @@
     .burger-container{
         padding: 0;
         padding-top: 40px;
+        padding-bottom: 40px;
+        overflow-y: auto;
     }
     .burg-lang{
         margin-bottom: 24px;
