--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -803,7 +803,7 @@ main{
     z-index: 555;
 }
 .popular-product-img img{
-    /* width: 100%; */
+    width: 100%;
     height: 100%;
     position: relative;
     z-index: 555;
