--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -892,6 +892,12 @@ main{
     background: #E3662A;
     z-index: 1;
 } */
+.news-sliders-2 {
+    z-index: 5;
+}
+.news-slider-2-item{
+    width: 100%;
+}
 .news-img-box img{
     width: 100%;
     height: 100%;
