--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -591,8 +591,21 @@ main{
 }
 .back-item img{
     width: 100%;
-    height: 100%;
+    height: 313px;
     object-fit: cover;
+}
+.back-item .read-more-box{
+    width: 100%;
+    background: #1860A2;
+    margin-top: -6px;
+    position: absolute;
+    z-index: 33;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    height: calc(100% - 306px);
+    padding-left: 25px;
+    border-top: 1px solid #fff;
 }
 .front-item img{
     width: 100%;
