--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2336,7 +2336,7 @@ footer{
     align-items: center;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 1;
+    z-index: 9;
  }
  .tab-img-item{
      width: 80px;
@@ -2345,6 +2345,9 @@ footer{
      border: 4px solid #fff; 
      cursor: pointer;
      transition: 0.4s;
+ }
+ .tab-img-box-position .active{
+    display: none;
  }
  .tab-img-item:nth-child(2){
      margin: 0 20px;
@@ -2371,6 +2374,7 @@ footer{
      height: 44px;
      cursor: pointer;
      pointer-events: none;
+     z-index: 10;
  }
  .container-components-box{
      width: 100%;
@@ -2719,3 +2723,18 @@ footer{
      display: none;
  }
 /* Products */
+
+ 
+.fancy-gallery-items a.active{
+    z-index: 3;
+}
+.hidden-fancy-slider{
+    width: 0;
+    display: none;
+    height: 100vh;
+    background: black;
+    z-index: 999999999999;
+    position: absolute;
+    top: 0;
+    left:0;
+}
